--- a/doc/dissertation/content/low_order/low_order_viscosity.tex
+++ b/doc/dissertation/content/low_order/low_order_viscosity.tex
@@ -15,14 +15,15 @@ bilinear form is employed in the low-order scheme:
    with $\indicescell$ being the set of indices corresponding to degrees of
    freedom in the support of cell $\cell$:
    \begin{equation}
-     \indicescell \equiv \{j\in\{1,\ldots,N\}: |\support_j\cap \cell|\ne 0\}
+     \indicescell \equiv \{j\in\{1,\ldots,N\}: |\support_j\cap \celldomain|\ne 0\}
      \eqc
    \end{equation}
-   and $\cardinality$ being the number of elements in the set $\indicescell$,
+   $\cardinality$ being the number of elements in the set $\indicescell$,
    i.e., the set's cardinality:
    \begin{equation}
-     \cardinality \equiv \textup{card}(\indicescell) \eqp
+     \cardinality \equiv \textup{card}(\indicescell) \eqc
    \end{equation} 
+   and $\cellvolume$ being the cell volume.
 \end{definition}
 %--------------------------------------------------------------------------------
 The definition of the low-order viscosity follows.
@@ -30,13 +31,13 @@ The definition of the low-order viscosity follows.
 \begin{definition}{Low-Order Viscosity}
    The low-order viscosity for cell $\cell$ is defined as follows:
    \begin{equation}
-     \lowordercellviscosity \equiv \max\limits_{i\ne j\in \indicescell}
-     \frac{\max(0,\ssmatrixletter\ij)}
-     {-\sum\limits_{T\subset\support\ij} \localviscbilinearform{T}{j}{i}}
+     \lowordercellviscosity[\timeindex] \equiv \max\limits_{i\ne j\in\indicescell}
+     \frac{\max(0,\ssmatrixletter\ij^\timeindex)}
+     {-\mkern-20mu\sumKSij[T]\mkern-20mu\localviscbilinearform{T}{j}{i}}
      \eqc
    \end{equation}
-   where $\ssmatrixletter\ij$ is the $i,j$th entry of the Galerkin
-   steady-state matrix given by Equation \eqref{eq:Aij} and
+   where $\ssmatrixletter\ij^\timeindex$ is the $i,j$th entry of the Galerkin
+   steady-state matrix given by Equation \eqref{eq:Aij}, and
    $\support\ij=\support_i\cap \support_j$ is the dual-support of test
    functions $\testfunction_i$ and $\testfunction_j$.
 \end{definition}
