--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -23,7 +23,7 @@
 \usepackage[hidelinks]{hyperref}
 
 % input user-defined commands
-\input{content/newestcommands}
+\input{content/newcommands}
 \input{content/theorems_dissertation}
 
 % create path to content directory
