--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -34,6 +34,13 @@ known as an outer product, of column vectors $\mathbf{a}$ and $\mathbf{b}$,
 i.e., $\mathbf{a}\otimes\mathbf{b}\equiv\mathbf{a}\mathbf{b}^T$. Thus,
 $(\mathbf{a}\otimes\mathbf{b})\ij = a_i b_j$
 
+Functions of time often omit the time argument and instead take the time index
+as a superscript, e.g., $f(\timevalue^\timeindex)$ is abbreviated as
+$f^\timeindex$. Similarly, functions of a time-dependent solution or other
+time-dependent arguments are sometimes abbreviated by dropping the dependence
+on the argument and adopting the time index as a superscript, e.g.,
+$f(\approximatescalarsolution^\timeindex)$ becomes $f^\timeindex$.
+
 \begin{mytable}{Abbreviations Used in Dissertation}{abbreviations}{l l}
 {\emph{Abbreviation} & \emph{Description}}
 CG    & continuous Galerkin\\
