added more tests and did work on new diffusion classes

--- a/doc/dissertation/README
+++ b/doc/dissertation/README
@@ -32,4 +32,6 @@ TO DO:
 * check that either of these is consistent throughout the dissertation:
   1. only important equations are numbered
   2. all equations are numbered
+* check that all equations are consistently punctuated (with comma or period
+  at the end of each. For conditional expressions, make sure this is consistent
 
