some work on doc

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -16,8 +16,12 @@
 %===============================================================================
 \section{Discretization}
 %===============================================================================
-\subsection{Spatial Discretization\label{sec:spatial_discretization}}
-  \input{content/discretization/spatial_discretization}
+\subsection{Spatial Discretization for Scalar Conservation Laws
+  \label{sec:spatial_discretization_scalar}}
+  \input{content/discretization/spatial_discretization_scalar}
+\subsection{Spatial Discretization for Conservation Law Systems
+  \label{sec:spatial_discretization_system}}
+  \input{content/discretization/spatial_discretization_system}
   \subsubsection{The Shallow Water Equations}
   \input{content/discretization/shallowwater}
 \subsection{Temporal Discretization\label{sec:temporal_discretization}}
