--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -21,6 +21,7 @@
 \newcommand{\dofindex}{j}
 \newcommand{\nodeindex}{k}
 \newcommand{\componentindex}{m}
+\newcommand{\transpose}{^{\text{T}}}
 
 % solution
 \newcommand{\scalarsolution}{u}
@@ -68,8 +69,7 @@
 % conservation law
 \newcommand{\consfluxletter}{f}
 \newcommand{\consfluxscalar}[1][\scalarsolution]{\mathbf{\consfluxletter}(#1)}
-\newcommand{\consfluxvector}{\mathbf{\MakeUppercase{\consfluxletter}}
-  (\vectorsolution)}
+\newcommand{\consfluxvector}{\mathbf{\MakeUppercase{\consfluxletter}}}
 \newcommand{\conssource}{\mathbf{s}(\vectorsolution)}
 
 % viscosity
