--- a/doc/dissertation/content/preliminaries/conservation_laws.tex
+++ b/doc/dissertation/content/preliminaries/conservation_laws.tex
@@ -1,5 +1,5 @@
 A general system of conservation law equations is
-\begin{equation}
+\begin{equation}\label{eq:conservation_law_system_homo}
   \ppt{\vectorsolution} + \divergence\consfluxvector
   = \mathbf{0} \eqc
 \end{equation}
@@ -7,7 +7,7 @@ where $\vectorsolution$ is a vector of conserved quantities and
 $\consfluxvector$ is the vector of conservation law flux
 functions. When a conservation law does not fit this model equation,
 a source term must be added:
-\begin{equation}
+\begin{equation}\label{eq:conservation_law_system_source}
   \ppt{\vectorsolution} + \nabla\cdot\consfluxvector
   = \conssource \eqp
 \end{equation}
